Bug 358855 - message list column widths lost when program closed
Summary: message list column widths lost when program closed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 5.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-01 06:31 UTC by Igor Zhuravlov
Modified: 2016-02-26 06:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Zhuravlov 2016-02-01 06:31:45 UTC
Column widths in message list are narrowed down by default leaving blank area to the right of the rightmost column. If I expand column widths by mouse and restart KMail, then column widths get reset to its default narrowed values but not those which I set before.

Reproducible: Always

Steps to Reproduce:
1. Start KMail. Columns width is narrowed down by default.
2. Set column widths in message list as you wish.
3. Restart KMail


Actual Results:  
Column have widths as after step 1.

Expected Results:  
Columns should have widths as after step 2.

Possible duplicate of bugs: 178154, 203251, 351222, 352865, 357313. Always reproducible.
Comment 1 Laurent Montel 2016-02-26 06:35:05 UTC
Git commit 2b118bef6de176464e4838b56e16e6d6c77a6fe4 by Montel Laurent.
Committed on 26/02/2016 at 06:34.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 358855 - message list column widths lost when program closed

FIXED-IN: 5.1.3

M  +3    -1    messagelist/src/core/view.cpp

http://commits.kde.org/kdepim/2b118bef6de176464e4838b56e16e6d6c77a6fe4