Fix Bug 358855 - message list column widths lost when program closed

FIXED-IN: 5.1.3
BUG: 358855