messagelist/src/core/view.cpp
@@ -553,7 +553,9 @@ void View::applyThemeColumns()
             //qCDebug(MESSAGELIST_LOG) << "Resize section " << idx << " to " << lColumnWidths[ idx ];
             const int columnWidth(lColumnWidths[ idx ]);
             (*it)->setCurrentWidth(columnWidth);
-            header()->resizeSection(idx, columnWidth);
+            //Laurent Bug 358855 - message list column widths lost when program closed
+            // I need to investigate if this code is still necessary (all method)
+            //header()->resizeSection(idx, columnWidth);
         } else {
             (*it)->setCurrentWidth(-1);
         }
